--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  @variants responsive {
+    .icon {
+      width: 1.5em;
+      height: 1.5em;
+    }
+
+    .icon-sm {
+      width: 1em;
+      height: 1em;
+    }
+  }
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap');
