--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html, body, #root {
+    @apply min-h-full flex flex-1 flex-col;
+  }
+}
+
 @layer utilities {
   @variants responsive {
     .icon {
