fix(fluidnav): add padding for bottom navigation bar

--- a/src/features/navigation/FluidNavigation.module.css
+++ b/src/features/navigation/FluidNavigation.module.css
@@ -16,6 +16,7 @@
 
 .screen {
   @apply flex;
+  @apply pb-14;
 }
 
 @screen md {
@@ -39,6 +40,7 @@
 
   .screen {
     grid-area: screen;
+    @apply pb-0;
   }
 
   .items {
