feat(navigation): fix sidebar cutoff on smaller screen widths

--- a/src/features/navigation/FluidNavigation.module.css
+++ b/src/features/navigation/FluidNavigation.module.css
@@ -26,16 +26,14 @@
     grid-template-rows: 100%;
     grid-template-areas: 'space content space1';
   }
-  
+
   .content {
     @apply gap-4;
     grid-template-columns: minmax(min-content, 12rem) minmax(min-content, theme('screens.md'));
     grid-template-rows: 1fr;
-    
+
     grid-area: content;
     grid-template-areas: 'items screen';
-
-    transform: translateX(-5vw);
   }
 
   .screen {
@@ -49,5 +47,11 @@
     @apply flex-col px-4 py-16 space-y-4;
     grid-area: items;
     height: min-content;
+  }
+}
+
+@screen xl {
+  .content {
+    transform: translateX(-5vw);
   }
 }
